--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
       crossorigin="anonymous"
     ></script>
-    <title>HealtyMind</title>
+    <title>Neggo</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
